PR/50454: Timo Buhrmester: Fix wrong allocation for wall(1) -g Modernize.